--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "url": "https://github.com/photonstorm/phaser3-project-template/issues"
   },
   "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
+  "dependencies": {
+    "phaser": "^3.3.0",
+    "webpack": "^3.4.1"
+  },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.0",
-    "webpack": "^3.4.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "raw-loader": "^0.5.1",
-    "phaser": "^3.3.0"
+    "webpack-dev-server": "^2.11.0"
   }
 }
