--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "npm run build && webpack-dev-server --port=8000",
+    "start": "npm run build && webpack-dev-server --port $PORT --host 0.0.0.0",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
