--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "npm run build && webpack-dev-server --port $PORT --host 0.0.0.0",
-    "heroku-postbuild": "npm run build"
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
