--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "postinstall": "npm run build",
-    "start": "node server.js"
+    "build": "webpack",
+    "start": "npm run build && webpack-dev-server --port=8000",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
