--- a/.stickler.yml
+++ b/.stickler.yml
@@ -11,6 +11,8 @@ files:
   ignore:
       - 'bundle/*'
       - 'src/js/phaser.min.js'
+      - 'webpack/base.js'
+      - '"webpack/prod.js'
 
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
